# clipboard_ffi

./: .gitignore
start-here/: CMakeLists.txt  README.md  main.cpp
start-here/clipboard_rs/: Cargo.toml
start-here/clipboard_rs/src/: bindings.rs  lib.rs
